--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "url": "git@github.com:maxogden/voxel-hello-world.git"
   },
   "dependencies": {
+    "browser-request": "^0.3.2",
     "extend": "1.1.3",
     "hapi": "^6.6.0",
+    "request": "^2.40.0",
     "tile-cover": "^0.3.0",
     "tilebelt": "^0.2.0",
     "vector-tile": "^0.1.2",
@@ -23,6 +25,7 @@
     "beefy": "0.0.11"
   },
   "scripts": {
-    "start": "beefy test.js:bundle.js 8080"
+    "start": "beefy test.js:bundle.js 8080",
+    "serve": "node app.js"
   }
 }
