--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "browser-request": "^0.3.2",
+    "concat-stream": "^1.4.6",
     "extend": "1.1.3",
     "hapi": "^6.6.0",
+    "pbf": "0.0.2",
     "request": "^2.40.0",
     "tile-cover": "^0.3.0",
     "tilebelt": "^0.2.0",
