--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "concat-stream": "^1.4.6",
     "extend": "1.1.3",
     "hapi": "^6.6.0",
+    "leveldown": "^1.0.0",
+    "levelup": "^0.19.0",
+    "minimist": "^1.1.0",
     "pbf": "0.0.2",
+    "progress-bar": "^0.1.1",
+    "queue-async": "^1.0.7",
     "request": "^2.42.0",
+    "single-line-log": "^0.4.1",
     "tile-cover": "^0.3.0",
     "tilebelt": "^0.5.1",
     "traverse": "^0.6.6",
+    "turf-bbox-polygon": "^0.1.5",
     "vector-tile": "^0.1.2",
     "voxel": "0.3.1",
     "voxel-engine": "~0.18.0",
