--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "browser-request": "^0.3.2",
+    "colors": "^1.0.3",
     "concat-stream": "^1.4.6",
     "extend": "1.1.3",
     "hapi": "^6.6.0",
-    "leveldown": "^1.0.0",
+    "leveldown": "^0.10.0",
     "levelup": "^0.19.0",
     "minimist": "^1.1.0",
     "pbf": "0.0.2",
