--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "voxel-hello-world",
-  "version": "0.6.0",
+  "name": "voxel-openstreetmap",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:maxogden/voxel-hello-world.git"
+    "url": "git@github.com:morganherlocker/voxel-openstreetmap.git"
   },
   "dependencies": {
-    "browser-request": "^0.3.2",
-    "colors": "^1.0.3",
-    "concat-stream": "^1.4.6",
+    "browser-request": "^0.3.3",
     "extend": "1.1.3",
-    "hapi": "^6.6.0",
-    "leveldown": "^0.10.0",
-    "levelup": "^0.19.0",
-    "minimist": "^1.1.0",
-    "pbf": "0.0.2",
-    "progress-bar": "^0.1.1",
-    "queue-async": "^1.0.7",
-    "request": "^2.42.0",
-    "single-line-log": "^0.4.1",
-    "tile-cover": "2.1.0",
-    "tilebelt": "^0.5.1",
-    "traverse": "^0.6.6",
-    "turf-bbox-polygon": "^0.1.5",
-    "vector-tile": "^0.1.2",
+    "pbf": "^1.3.2",
+    "tile-cover": "^2.4.0",
+    "tilebelt": "^0.7.1",
+    "turf": "^2.0.0",
+    "vector-tile": "^1.1.2",
     "voxel": "0.3.1",
     "voxel-engine": "~0.18.0",
     "voxel-fly": "~0.1.0",
@@ -36,7 +25,7 @@
     "beefy": "0.0.11"
   },
   "scripts": {
-    "start": "node app.js",
-    "build": "browserify ./test.js -o ./world/bundle.js"
+    "start": "beefy test.js:bundle.js 3000",
+    "build": "browserify test.js > bundle.js"
   }
 }
