--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "browser-request": "^0.3.3",
     "extend": "1.1.3",
+    "geojson-flatten": "^0.1.0",
+    "geojson-normalize": "0.0.0",
     "pbf": "^1.3.2",
     "tile-cover": "^2.4.0",
     "tilebelt": "^0.7.1",
